# crm_ai

./: .env.example  .gitignore  ASSUMPTIONS.md  MESSENGER_TZ_SPRINTS.md  Makefile  README.md  docker-compose.exposed.yml  docker-compose.ha.yml  docker-compose.prod.yml  docker-compose.yml  livekit.prod.yaml  livekit.yaml  project_analysis.md  secrets.yml.example  sprints.md  тест.txt
backend/: .env.example  Dockerfile  alembic.ini  conftest.py  entrypoint.sh  pyproject.toml  requirements.txt  seed_plans.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_billing_defaults.py  0003_add_chat_core_tables.py  0004_add_chat_upload_sessions.py  0005_add_superadmin_org_deletion_jobs.py  0006_add_users_locale.py  0007_billing_payment_id_idempotency.py  0008_add_table_views_is_default.py  0009_add_users_avatar_url.py  0010_chat_message_delivery_hardening.py  0011_add_user_appearances.py  0012_add_file_preview_metadata.py  0013_calls_module.py  0014_calls_recording_fields.py  0015_add_kb_html_content.py  001_initial_schema.py  002_sprint3_5_files_tables_records.py  003_sprint6_12_views_kb_billing_ai_schedule.py  004_add_ai_usage_logs.py  005_add_recurrence_to_events.py  006_add_position_to_table_records.py  007_add_access_rules_table.py  008_add_report_dashboards_and_widgets.py  009_add_ai_chat_history_tables.py  010_add_table_folders.py  011_extend_events_recurrence_text.py  012_add_ai_limits_to_plans.py  013_add_ai_usage_composite_indexes.py  014_add_ai_chat_composite_indexes.py  015_add_ai_model_constraints.py  016_harden_access_rules_constraints.py  017_add_access_match_indexes.py  018_add_org_ai_enabled.py  019_add_security_audit_actions.py  020_add_parent_to_table_folders.py  021_add_subscription_lifecycle_fields.py  (+28 more)
backend/src/: config.py  config_contract.py  main.py  router.py
backend/tests/: conftest.py  test_appearance_api.py  test_auth.py  test_bootstrap_db_wait.py  test_config_contract.py  test_health.py  test_http_headers.py  test_module_contract_boundaries.py  test_org.py  test_security_regressions.py  test_tables.py  test_task_failure_logging.py  test_team_scenarios.py
backend/tools/: broad_except_whitelist.txt  check_broad_except.py
(+573 files in other folders)
